# archive-content-pusher

./: .dockerignore  .gitignore  Dockerfile  README.md  daily_lesson.py  logger.py  pyproject.toml  settings.py  wp-autopost.py  wp_rest_api.py
.github/workflows/: cicd.yml
scripts/: cron.txt  laitman-ru_daily_lesson.sh  laitman-ru_daily_lesson_docker.sh  laitman-ru_zohar_lesson.sh
